up to speed with classwork 2/17

--- a/index.html
+++ b/index.html
@@ -4,34 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bulma Examples</title>
-    <!--Below this is the link for the BULMA STYLE SHEET-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <!--Below this is the link for all the FONT AWESOME icons-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.css">
+    <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <h1 class="title">Bulma Examples</h1>
-        <h2 class="subtitle">Some examples of using Bulma</h2>
-    </div>
-    <div class="container">
-        <h1 class="title">Next thing</h1>
-        <h2 class="subtitle">Blag blah blah</h2>
-    </div>
-
-    <div class="content">
-        <div class="columns">
-            <div class="column is-one-quarter">
-                <p class="has-background-warning">This is the first little section</p>
-            </div>
-            <div class="column">
-                <p>Look we have more stuff</p>
-            </div>
-            <div class="column">
-                <p class="has-background-danger">Last silly little chunk</p>
-            </div>
-        </div>
-    </div>
+    <h1>Links to itemp in classwork (I will soon update all these with descriptions):</h1>
+    <a href="menu.html">1st assignment of the semester- making a menu with just css</a>
+    <h2>NoFramework</h2>
+    <a href="NoFrameWork/index.html">Classwork with clickable notifications</a>
+    <a href="NoFramework/vue.html">Class work examples using Bulma and then vue</a>
+    <h2>Server</h2>
 </body>
 </html>
